src/main/java/com/crudtest/test/infra/errors/exceptions/InvalidStatusTransitionException.java
package com.crudtest.test.infra.errors.exceptions;

public class InvalidStatusTransitionException extends RuntimeException {
    public InvalidStatusTransitionException(String message) {
        super(message);
    }
}
